<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="100dp"
        android:text="Đăng ký tài khoản"
        android:textAlignment="center"
        android:textColor="@color/color9F5A7B"
        android:textSize="20dp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_signup"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/fullname"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_person2"
            android:fontFamily="@font/open_sans" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_below="@+id/til_fullname"
        android:hint="@string/email"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_mail"
            android:fontFamily="@font/open_sans" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_email"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/username"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_person2"
            android:fontFamily="@font/open_sans" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/til_username"
        android:layout_marginHorizontal="20dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_lock"
            android:fontFamily="@font/open_sans" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/b_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Đăng kí"
        android:fontFamily="@font/open_sans"
        android:letterSpacing="0"
        android:layout_below="@id/til_password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/color9F5A7B"
        />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/b_signup"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/dang_nhap"
        android:textAlignment="center" />

</RelativeLayout>