<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_regulation"
    tools:context=".RegulationActivity">

    <TextView
        android:id="@+id/tv_regulation_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="45dp"
        android:background="#9F5A7B"
        android:text="Quy định"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"/>
    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="?android:selectableItemBackground"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_regulation_title">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/b_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/question1"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_1"
                android:paddingStart="10dp"
                android:drawableTint="@color/color9F5A7B"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/b_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/question2"
                android:layout_marginTop="10dp"
                android:layout_below="@id/htmltv_1"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_2"
                android:paddingStart="10dp"
                android:drawableTint="@color/color9F5A7B"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/b_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/question3"
                android:layout_marginTop="10dp"
                android:layout_below="@id/htmltv_2"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_3"
                android:paddingStart="10dp"
                android:drawableTint="@color/color9F5A7B"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/b_question4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:text="@string/question4"
                android:layout_marginTop="10dp"
                android:layout_below="@id/htmltv_3"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_4"
                android:paddingStart="10dp"
                android:drawableTint="@color/color9F5A7B"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"/>

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:tag="noclick"
                android:id="@+id/htmltv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/b_question1"
                android:textSize="16sp"
                android:padding="5dp"
                android:text=""
                />

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/htmltv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/b_question2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="5dp"
                android:text=""/>

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/htmltv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/b_question3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="5dp"
                android:text=""/>

            <org.sufficientlysecure.htmltextview.HtmlTextView
                android:id="@+id/htmltv_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/b_question4"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="5dp"
                android:text=""/>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>