<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/iv_Google"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_google"
        tools:layout_editor_absoluteX="115dp" />

    <TextView
        android:id="@+id/tv_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/iv_Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="156dp"
        tools:layout_editor_absoluteY="288dp" />

    <TextView
        android:id="@+id/tv_SignInInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_multi"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="474dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/b_SignInWithGoogle"
        android:drawableStart="@drawable/ic_google_24"
        android:paddingStart="10dp"
        android:paddingEnd="1dp"
        android:background="@drawable/button_radius"
        android:layout_width="250dp"
        android:foreground="?attr/selectableItemBackground"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_w_google"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/tv_SignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="378dp" />
    <com.google.android.gms.common.SignInButton
        android:id="@+id/bGoogleSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/b_SignInWithGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:background="@drawable/round_button"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_SignInWithGoogle"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/imageButton13"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:adjustViewBounds="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_button"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_SignInWithGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/twitter"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="481dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/black"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toBottomOf="@id/b_SignInWithGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="662dp" />


</androidx.constraintlayout.widget.ConstraintLayout>