<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CODActivity"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/tv_cod_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_red"
        android:text="Đối soát - Chuyển tiền thu hộ"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAlignment="center"/>
    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="?android:selectableItemBackground"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_cod_title">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b_question1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="@font/open_sans"
                android:letterSpacing="0"
                android:text="@string/cod_q1"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_1"
                android:paddingStart="10dp"
                android:drawableTint="@color/light_red"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/b_question2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="@font/open_sans"
                android:letterSpacing="0"
                android:text="@string/cod_q2"
                android:layout_marginTop="10dp"
                android:layout_below="@id/wv_1"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_2"
                android:paddingStart="10dp"
                android:drawableTint="@color/light_red"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/b_question3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:fontFamily="@font/open_sans"
                android:letterSpacing="0"
                android:text="@string/cod_q3"
                android:layout_marginTop="10dp"
                android:layout_below="@id/wv_2"
                android:textSize="15sp"
                android:drawableLeft="@drawable/ic_3"
                android:paddingStart="10dp"
                android:drawableTint="@color/light_red"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textAllCaps="false"/>

            <WebView
                android:tag="noclick"
                android:id="@+id/wv_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/b_question1"
                android:textSize="16sp"
                android:padding="5dp"
                android:text=""
                />

            <WebView
                android:tag="noclick"
                android:id="@+id/wv_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/b_question2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="5dp"
                android:text=""/>

            <WebView
                android:tag="noclick"
                android:id="@+id/wv_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/b_question3"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="5dp"
                android:text=""/>



        </RelativeLayout>
    </ScrollView>

</RelativeLayout>